# rgu_programming_lab1

./: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  17.c  18.c  19.c  2.c  20.c  21.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt
