cmake_minimum_required(VERSION 3.29)
project(16octLAB C)

set(CMAKE_C_STANDARD 99)

add_executable(16octLAB
        1.c
        2.c
        3.c
        4.c
        5.c
        6.c
        7.c
        8.c
        9.c
        11.c
        12.c
        13.c
        17.c
        18.c
        10.c
        14.c
        15.c
        20.c
        21.c
        19.c
)
